# gramophone

./: Cargo.toml  README.md
assets/audio/: CREDITS.txt
assets/packets/: first.txt  second.txt  third.txt
assets/plaintexts/: lorem.txt
benches/: crypto.rs  websocket.rs
crates/main/: Cargo.toml
crates/main/examples/: client.rs
crates/main/examples/common/: mod.rs
crates/main/src/: lib.rs  util.rs
crates/main/src/client/: channel.rs  error.rs  event.rs  heartbeater.rs  info.rs  message.rs  mod.rs  state.rs
crates/main/src/crypto/: aes256gcm.rs  mod.rs  mode.rs  xchacha20poly1305.rs
crates/main/src/udp/: error.rs  ext.rs  mod.rs
crates/types/: Cargo.toml  LICENSE.txt
crates/types/src/: close_code.rs  deserializers.rs  lib.rs  opcode.rs
crates/types/src/payload/: mod.rs  speaking.rs
crates/types/src/payload/command/: mod.rs  speaking.rs
crates/types/src/payload/incoming/: client_connect.rs  client_disconnect.rs  heartbeat_ack.rs  hello.rs  mod.rs  ready.rs  session_description.rs
crates/types/src/payload/outgoing/: identify.rs  mod.rs  resume.rs  select_protocol.rs
examples/: client.rs  udp.rs  usage.rs  websocket.rs
examples/common/: mod.rs
src/: lib.rs
src/client/: channel.rs  error.rs  event.rs  info.rs  mod.rs  options.rs  tests.rs
src/crypto/: aes256gcm.rs  discord.rs  mod.rs  xchacha20poly1305.rs
src/net/: mod.rs
src/net/udp/: error.rs  mod.rs
src/net/websocket/: error.rs  heartbeater.rs  mod.rs
src/net/ws/: error.rs  heartbeater.rs  mod.rs
src/stream/: mod.rs  resampler.rs
