[workspace]
default-members = ["crates/main"]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["memothelemo <dev@memothelemo.xyz>"]
edition = "2024"
homepage = ""
repository = "https://github.com/memothelemo/gramophone"
rust-version = "1.85.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "warn"
empty_enum = "warn"
unwrap_used = "warn"

empty_docs = "allow"
new_without_default = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.20"
twilight-model = "0.16.0"
